[tool.poetry]
name = "qa-guru-homework13"
version = "0.1.0"
description = ""
authors = ["Larisa Badmaeva <larilotus12@gmail.com>"]
readme = "README.md"
packages = [{include = "qa_guru_homework13"}]

[tool.poetry.dependencies]
python = "^3.10"
selene = "2.0.0rc2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
